--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,5 +1,5 @@
 
-name: "update pins"
+name: "latest pins"
 
 on:
   workflow_dispatch:
@@ -19,9 +19,35 @@ jobs:
 
       - name: Install poetry from PyPI
         uses: install-pinned/poetry@d95a199a06c2eb4e23169dd4f7139bb645b9dbe2  # 1.3.2
-      - run: poetry init   --directory ${{ runner.temp }} --no-interaction --name lockenv --python ">=3.7"
-      - run: poetry add    --directory ${{ runner.temp }} --no-interaction --lock poetry                      
-      - run: poetry export --directory ${{ runner.temp }} --no-interaction -o requirements.txt             
+
+      - run: poetry init --name lockenv --python "*" --directory ${{ runner.temp }} --no-interaction
+      - name: "Run poetry add poetry ..."
+        shell: python
+        run: |
+          import re
+          import subprocess
+          try:
+              subprocess.run([
+                  "poetry", "add", 
+                  "--directory", "${{ runner.temp }}", 
+                  "--no-interaction", 
+                  "--lock",
+                  "poetry"
+              ], check=True, capture_output=True, text=True) 
+          except subprocess.CalledProcessError as e:
+              if m := re.search(r'set the `python` property to "(.+?)"', e.stderr):
+                  print(f"Retrying with --python {m[1]}...")
+                  subprocess.run([
+                      "poetry", "add", 
+                      "--directory", "${{ runner.temp }}", 
+                      "--no-interaction", 
+                      "--lock",
+                      "--python", m[1],
+                      "poetry"
+                  ], check=True) 
+              else:
+                  raise
+      - run: poetry export -o requirements.txt --directory ${{ runner.temp }} --no-interaction
 
       - run: |
           if [ -n "$(git status --porcelain)" ]; then
