--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,48 +13,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: main
-      - uses: actions/setup-python@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@f064c84ddba8609eaa6f191659f0f166260f175b
         with:
-          python-version: 3.11
+            version: "0.5.7"
 
-      - name: Install poetry from PyPI
-        uses: install-pinned/poetry@d95a199a06c2eb4e23169dd4f7139bb645b9dbe2  # 1.3.2
-
-      - run: poetry init --name lockenv --python "^3.8" --directory ${{ runner.temp }} --no-interaction
-      - name: "Run poetry add poetry ..."
-        shell: python
-        run: |
-            import re
-            import subprocess
-
-            def add(pyver: str):
-                subprocess.run([
-                    "poetry", "add",
-                    "--directory", "${{ runner.temp }}",
-                    "--no-interaction",
-                    "--lock",
-                    "--python", pyver,
-                    "poetry"
-                ], check=True, capture_output=True, text=True)
-
-            try:
-                add("*")
-            except subprocess.CalledProcessError as e:
-                if (m := re.search(r'set the `python` property to "(.+?)"', e.stderr)) is None:
-                    raise
-                print(f"Retrying with --python {m[1]}...")
-
-                try:
-                    add(m[1])
-                except subprocess.CalledProcessError as e:
-                    if (m := re.search(r'set the `python` property to "(.+?)"', e.stderr)) is None:
-                        raise
-                    print(f"Retrying with --python {m[1]}...")
-
-                    # We need to retry twice for some projects.
-                    add(m[1])
-
-      - run: poetry export -o requirements.txt --directory ${{ runner.temp }} --no-interaction
+      - run: uv --directory ${{ runner.temp }} init --no-workspace --no-readme --name install-pinned
+      - run: uv --directory ${{ runner.temp }} add --no-sync poetry
+      - run: uv --directory ${{ runner.temp }} export -o ${{ github.workspace }}/requirements.txt
 
       - run: |
           if [ -n "$(git status --porcelain)" ]; then
