update repository from template

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,12 @@ jobs:
         with:
             version: "0.5.7"
 
-      - run: uv --directory ${{ runner.temp }} init --no-workspace --no-readme --name install-pinned
+      - run: uv --directory ${{ runner.temp }} init
+            --name install-pinned
+            --no-workspace
+            --no-readme
+            --no-pin-python
+            --python 3.8
       - run: uv --directory ${{ runner.temp }} add --no-sync poetry
       - run: uv --directory ${{ runner.temp }} export -o ${{ github.workspace }}/requirements.txt
 
